k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-backend
  template:
    metadata:
      labels:
        app: discovery-backend
    spec:
      containers:
      - name: discovery-backend
        image: 042889969014.dkr.ecr.us-east-1.amazonaws.com/discovery-backend:20250826110446
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"                # Minimum CPU guaranteed
            memory: "128Mi"            # Minimum memory guaranteed
            ephemeral-storage: "200Mi" # Minimum disk space guaranteed
          limits:
            cpu: "500m"                # Max CPU allowed
            memory: "1000Mi"            # Max memory allowed
            ephemeral-storage: "500Mi" # Max disk space allowed
        volumeMounts:
          - mountPath: /etc/discovery-backend-secret
            name: discovery-backend-secret
            readOnly: true
      serviceAccountName: mcp-poc
      volumes:
        - csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: discovery-backend-spc
          name: discovery-backend-secret
---
