k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-backend-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: discovery-backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
---
